--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@
 # Author: Tony DiCola
 # License: Public Domain
 # This configuration will work with Travis CI (travis-ci.org) to automacially
-# build .mpy files for MicroPython when a new tagged release is created.  This
+# build .mpy files for CircuitPython when a new tagged release is created.  This
 # file is relatively generic and can be shared across multiple repositories by
 # following these steps:
 #   1. Copy this file into a .travis.yml file in the root of the repository.
@@ -36,7 +36,7 @@ deploy:
   provider: releases
   api_key: $GITHUB_TOKEN
   file:
-  - "is31fl3731.mpy"
+  - "adafruit_is31fl3731.mpy"
   skip_cleanup: true
   on:
     tags: true
@@ -44,9 +44,9 @@ deploy:
 before_install:
 - sudo apt-get -yqq update
 - sudo apt-get install -y build-essential git python python-pip
-- git clone https://github.com/adafruit/micropython.git
-- make -C micropython/mpy-cross
-- export PATH=$PATH:$PWD/micropython/mpy-cross/
+- git clone https://github.com/adafruit/circuitpython.git
+- make -C circuitpython/mpy-cross
+- export PATH=$PATH:$PWD/circuitpython/mpy-cross/
 - sudo pip install shyaml
 
 before_deploy:
