--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,7 @@ requires = [
 [project]
 name = "adafruit-circuitpython-is31fl3731"
 description = "CircuitPython library for IS31FL3731 charlieplex LED matrices."
-version = "0.0.0-auto.0"
+version = "0.0.0+auto.0"
 readme = "README.rst"
 authors = [
     {name = "Adafruit Industries", email = "circuitpython@adafruit.com"}
